@@ -1,3 +1,13 @@
+2011-01-06  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-info-mode-tab-standard): New.
+	(epackage-info-mode-tab-command): Use
+	`epackage-info-mode-tab-standard'.
+	(epackage-field-name): Correct regexp.
+	(epackage-info-mode-set-variables): Set `tab-stop-list' by 4.
+	(epackage-info-mode-tab-standard): Change
+	`indent-for-tab-command' to `tab-to-tab-stop'.
+
 2010-12-27 Mon  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el: (Spec): add 'Custom' to License. Add new field
